aligned navigation buttons correctly and navbtn-hover is corrected too

--- a/style.css
+++ b/style.css
@@ -39,18 +39,19 @@ header {
 
 .navbtn {
     display: flex;
-    background-color: lightcoral;
     height: 35px;
     align-items: center;
     justify-content: space-evenly;
 }
 
 .navbtn .apps {
-    width: 35px;
-    height: 35px;
+    width: 32px;
+    height: 32px;
     border: none;
     border-radius: 50px;
     background-color: transparent;
+    color: rgb(113, 116, 121);
+    padding-top: 3px;
 }
   
 .navbtn .account {
@@ -59,6 +60,7 @@ header {
     border: none;
     border-radius: 50px;
     background-color: transparent;
+    padding-top: 3px;
 }
 
 .navbtn img{
@@ -72,11 +74,11 @@ header {
 }
   
 .apps:hover {
-    background-color: aliceblue;
+    background-color: rgba(203, 205, 206, 0.21);
 }
 
 .account:hover {
-    background-color: aliceblue;
+    background-color: rgb(203, 205, 206, 0.21);
 }
 
 img {
@@ -127,7 +129,7 @@ textarea {
     min-width: 300px;
 }
 
-button {
+.search-button button {
     background-color: #F8F9FA;
     border: none;
     border-radius: 4px;
@@ -142,10 +144,9 @@ button {
 
 .search-button {
     margin-left: 75px;
-    
 }
 
-button:hover {
+.search-button button:hover {
     box-shadow: 0 1px 4px 1px #bebebeb7;
     cursor: pointer;
 }
